# R3D3_Model_URDF

./: CMakeLists.txt  Final_Project_IGVC_Course.docx  README.md  package.xml
Ben/: README
Ben/homework5-Grudz/: CHANGELOG.rst  CMakeLists.txt  README.md
Ben/homework5-Grudz -REV2/: package.xml
Ben/homework5-Grudz -REV2/launch/: homework5.launch
Ben/homework5-Grudz -REV2/src/: diff_drive_mantis.cpp
Ben/homework5-Grudz -REV2/test/: test_homework5.cpp
Ben/homework5-Grudz -REV2/yaml/: global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
Ben/homework5-Grudz/launch/: homework5.launch
Ben/homework5-Grudz/yaml/: global_costmap_mapping_params.yaml  global_costmap_params.yaml  move_base_params.yaml
Completed - ECE5532 Final Project/igvc_flatland/: CMakeLists.txt  bcn_w1.sh  package.xml
Completed - ECE5532 Final Project/igvc_flatland/include/igvc_flatland/: RandomGates.h
Completed - ECE5532 Final Project/igvc_flatland/launch/: advanced_course_north.launch  basic_course_north.launch  basic_course_world.launch
Completed - ECE5532 Final Project/igvc_flatland/maps/: advanced_course_lines.yaml
Completed - ECE5532 Final Project/igvc_flatland/rviz/: rviz_config.rviz
Completed - ECE5532 Final Project/igvc_flatland/src/: acn_algorithm.cpp  bcn_algorithm.cpp
Completed - ECE5532 Final Project/igvc_flatland/yaml/: global_costmap_params.yaml
Sam/: README
Sam/igvc_flatland.v1/: CHANGELOG.rst  LICENSE  flatland_plugins.xml  package.xml
Sam/igvc_flatland.v1/include/igvc_flatland/: AutoJudge.h
Sam/igvc_flatland.v1/launch/: basic_course_north.launch  basic_course_south.launch  basic_course_world.launch
Sam/igvc_flatland.v1/maps/: advanced_course_lines.pgm  advanced_course_objects.yaml  basic_course.world.yaml  basic_course_lines.pgm  basic_course_lines.yaml  basic_course_objects.pgm
Sam/igvc_flatland.v1/msg/: WaypointList.msg
Sam/igvc_flatland.v1/robot/: igvc_bot_advanced_course.model.yaml
Sam/igvc_flatland.v1/rviz/: rviz_config.rviz
Sam/igvc_flatland.v1/src/: AutoJudge.cpp  r3d3JointPub.h
Sam/igvc_flatland.v1/urdf/: r3d3.urdf.xacro  r3d3_control.urdf.xacro  r3d3_sensors.urdf.xacro
Sam/igvc_flatland.v1/yaml/: global_costmap_mapping_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  roscontrol_params.yaml
Sam/igvc_flatland.v2/launch/: advanced_course_north.launch  advanced_course_world.launch  basic_course_north.launch
Sam/igvc_flatland.v2/maps/: advanced_course.world.yaml
Sam/igvc_flatland.v2/src/: RandomGates.cpp  final_project.cpp  main_r3d3_joint_pub.cpp
Sam/igvc_flatland.v2/yaml/: global_costmap_mapping_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Sam/igvc_flatland.v3/: CMakeLists.txt
Sam/igvc_flatland.v3/launch/: basic_course_north.launch  r3d3_gazebo.launch
Sam/igvc_flatland.v3/my_robot_name_2dnav/: package.xml
Sam/igvc_flatland.v3/robot/: igvc_bot_basic_course.model.yaml
Sam/igvc_flatland.v3/urdf/: r3d3_visual.urdf.xacro
Sam/igvc_flatland.v3/yaml/: global_costmap_mapping_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Sam/igvc_flatland.v4/launch/: advanced_course_north.launch  advanced_course_south.launch
Sam/igvc_flatland.v4/msg/: Waypoint.msg
Sam/igvc_flatland.v4/rviz/: rviz_igvc_config.rviz
Sam/igvc_flatland.v4/src/: final_project.cpp
Sam/igvc_flatland.v4/yaml/: amcl_params_gazebo.yaml  local_costmap_params.yaml
Sam/igvc_flatland.v5/launch/: basic_course_north.launch  basic_course_south.launch
Sam/igvc_flatland.v5/maps/: advanced_course_objects.pgm
Sam/igvc_flatland.v5/src/: final_project.cpp
Sam/igvc_flatland.v5/urdf/: r3d3_gazebo.urdf.xacro
Sam/igvc_flatland.v5/yaml/: .local_planner_params.yaml.kate-swp  hector_params_gazebo.yaml  local_planner_params.yaml
Sam/igvc_flatland.v6/: CMakeLists.txt  README.md
Sam/igvc_flatland.v6/launch/: advanced_course_north.launch  advanced_course_south.launch  basic_course_north.launch  basic_course_south.launch
Sam/igvc_flatland.v6/oaklandrobotics-igvc_flatland-7bf719bcc30d/: .gitignore
Sam/igvc_flatland.v6/src/: diff_drive.cpp  final_project_advanced_north.cpp  final_project_advanced_south.cpp  final_project_basic_north.cpp  final_project_basic_south.cpp  r3d3JointPub.cpp
Sam/igvc_flatland.v6/yaml/: global_costmap_mapping_params.yaml  local_costmap_params.yaml
Sam/igvc_flatland/launch/: advanced_course_south.launch
Sam/igvc_flatland/maps/: basic_course_objects.yaml
Sam/igvc_flatland/src/: final_project.cpp
launch/: placeholder  r3d3_model.launch
