<?xml version="1.0"?>
<package format="2">
  <name>homework5</name>
  <version>2.0.2</version>
  <description>The homework5 package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>std_msgs</depend>
  <export>
  </export>
</package>
