<?xml version="1.0"?>
<package format="2">
  <name>igvc_flatland</name>
  <version>1.0.1</version>
  <description>
    Configuration of the Flatland simulator for IGVC
  </description>

  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>flatland_msgs</depend>
  <depend>flatland_plugins</depend>
  <depend>flatland_server</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>visualization_msgs</depend>
  
  <export>
    <flatland_server plugin="${prefix}/flatland_plugins.xml" />
  </export>
</package>
